@@ -2,16 +2,16 @@ package br.com.letscode.starwarsresistancesocialnetwork.rebelde;
 
 import br.com.letscode.starwarsresistancesocialnetwork.inventario.Inventario;
 import br.com.letscode.starwarsresistancesocialnetwork.localizacao.Localizacao;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
 
-import javax.annotation.PostConstruct;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.Objects;
 import java.util.StringTokenizer;
@@ -21,15 +21,13 @@ import java.util.stream.Collectors;
 @Component
 public class RebeldeRepository {
 
-    private Path path;
+    private File file;
 
-    @PostConstruct
-    public void init() {
+    public RebeldeRepository(@Value("${files.rebeldes}") String fileName) {
         try {
-            String caminho = "src/main/resources/dados/rebeldes.csv";
-            path = Paths.get(caminho);
-            if (!path.toFile().exists()) {
-                Files.createFile(path);
+            this.file = new ClassPathResource(fileName).getFile();
+            if (!file.exists()) {
+                Files.createFile(Path.of(file.getPath()));
             }
         } catch (IOException ioException) {
             ioException.printStackTrace();
@@ -37,21 +35,21 @@ public class RebeldeRepository {
     }
 
     public Rebelde inserirArquivo(Rebelde rebelde) throws IOException {
-        write(format(rebelde), StandardOpenOption.APPEND);
+        write(format(rebelde));
         return rebelde;
     }
 
-    private void write(String clienteStr, StandardOpenOption option) throws IOException {
-        try (BufferedWriter bf = Files.newBufferedWriter(path, option)) {
+    private void write(String rebeldeStr) throws IOException {
+        try (BufferedWriter bf = Files.newBufferedWriter(Path.of(file.getPath()))) {
             bf.flush();
-            bf.write(clienteStr);
+            bf.write(rebeldeStr);
         }
     }
 
     public List<Rebelde> listAll() throws IOException {
         List<Rebelde> rebeldes;
-        try (BufferedReader br = Files.newBufferedReader(path)) {
-            rebeldes = br.lines().filter(Objects::nonNull).filter(Predicate.not(String::isEmpty)).map(this::convert).collect(Collectors.toList());
+        try (BufferedReader br = Files.newBufferedReader(Path.of(file.getPath()))) {
+            rebeldes = br.lines().filter(Objects::nonNull).filter(Predicate.not(String::isEmpty)).map(this::getRebelde).collect(Collectors.toList());
         }
         return rebeldes;
     }
@@ -61,7 +59,7 @@ public class RebeldeRepository {
         for (Rebelde rebeldeBuilder : listaRebeldes) {
             builder.append(format(rebeldeBuilder));
         }
-        write(builder.toString(), StandardOpenOption.CREATE);
+        write(builder.toString());
     }
 
     private String format(Rebelde rebelde) {
@@ -76,7 +74,7 @@ public class RebeldeRepository {
                 rebelde.getInventario());
     }
 
-    private Rebelde convert(String linha) {
+    private Rebelde getRebelde(String linha) {
         StringTokenizer token = new StringTokenizer(linha, ",");
         return Rebelde.builder()
                 .id(token.nextToken())
@@ -85,18 +83,26 @@ public class RebeldeRepository {
                 .genero(GeneroRebelde.valueOf(token.nextToken()))
                 .qtdReport(Integer.valueOf(token.nextToken()))
                 .isTraitor(Boolean.parseBoolean(token.nextToken()))
-                .localizacao(Localizacao.builder()
-                        .x(Long.valueOf(token.nextToken()))
-                        .y(Long.valueOf(token.nextToken()))
-                        .z(Long.valueOf(token.nextToken()))
-                        .nomeBase(token.nextToken())
-                        .build())
-                .inventario(Inventario.builder()
-                        .arma(Integer.parseInt(token.nextToken()))
-                        .municao(Integer.parseInt(token.nextToken()))
-                        .agua(Integer.parseInt(token.nextToken()))
-                        .comida(Integer.parseInt(token.nextToken()))
-                        .build())
+                .localizacao(getLocalizacao(token))
+                .inventario(getInventario(token))
+                .build();
+    }
+
+    private Inventario getInventario(StringTokenizer token) {
+        return Inventario.builder()
+                .arma(Integer.parseInt(token.nextToken()))
+                .municao(Integer.parseInt(token.nextToken()))
+                .agua(Integer.parseInt(token.nextToken()))
+                .comida(Integer.parseInt(token.nextToken()))
+                .build();
+    }
+
+    private Localizacao getLocalizacao(StringTokenizer token) {
+        return Localizacao.builder()
+                .x(Long.valueOf(token.nextToken()))
+                .y(Long.valueOf(token.nextToken()))
+                .z(Long.valueOf(token.nextToken()))
+                .nomeBase(token.nextToken())
                 .build();
     }
 }
